TAG: entrezgeneload-3-1-1-3
DATE: 01/26/2005
STAFF: lec
CHANGES: MGI 3.11, TR 5626

TAG: entrezgeneload-3-1-1-2
TAG: entrezgeneload-3-1-1-1
DATE: 01/25/2005
STAFF: lec
CHANGES: MGI 3.11, TR 5626

TAG: entrezgeneload-3-1-0-15
DATE: 01/21/2005
STAFF: lec
CHANGES: TR 5939, TR 5173

TAG: entrezgeneload-3-1-0-14
TAG: entrezgeneload-3-1-0-13
DATE: 01/18/2005
STAFF: lec
CHANGES: TR 5939, TR 5173

TAG: entrezgeneload-3-1-0-12
DATE: 01/13/2005
STAFF: lec
CHANGES: TR 5939

TAG: entrezgeneload-3-1-0-11
TAG: entrezgeneload-3-1-0-10
TAG: entrezgeneload-3-1-0-9
DATE: 01/12/2005
STAFF: lec
CHANGES: TR 5939

TAG: entrezgeneload-3-1-0-8
TAG: entrezgeneload-3-1-0-7
DATE: 01/05/2005
STAFF: lec
CHANGES: TR 5939

TAG: entrezgeneload-3-1-0-6
TAG: entrezgeneload-3-1-0-5
TAG: entrezgeneload-3-1-0-4
DATE: 01/04/2005
STAFF: lec
CHANGES: TR 5939

TAG: entrezgeneload-3-1-0-3
DATE: 01/03/2005
STAFF: lec
CHANGES: TR 5939

TAG: entrezgeneload-3-1-0-2
TAG: entrezgeneload-3-1-0-1
DATE: 12/30/2004
STAFF: lec
RELEASE: A
CHANGES: TR 5939

TAG: entrezgeneload-tr6433-BP
DATE: 12/22/2004
STAFF: lec
RELEASE: A
CHANGES: Branch point tag for TR6433

TAG: entrezgeneload-1-0-1
TAG: entrezgeneload-1-0-0
DATE: 12/06/2004
STAFF: lec
RELEASE: A
CHANGES: converted from locuslinkload
