@@ -1,3 +1,9 @@
+TAG: entrezgeneload-3-1-1-4
+DATE: 01/31/2005
+STAFF: lec
+CHANGES: MGI 3.11, TR 5626
+2) new EntrezGene format: geneinfo
+
 TAG: entrezgeneload-3-1-1-3
 DATE: 01/26/2005
 STAFF: lec
